--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,8 @@ editor:
     wrap: 72
 ---
 
-[Link to Slides](Slides.html)
+[Link to Slides](Slides.html) .
+
 ## Literature Review 
 
 #### Introduction to Cox Proportional Hazards Model 
@@ -29,7 +30,7 @@ The Cox Proportional Hazard model is a powerful tool for survival analysis. This
 
 The application of the Cox Proportional Hazard model extends to various domains, each shedding light on its adaptability and efficacy. 
 
-In a healthcare context, Ben-Assuli's [@Ben-Assuli] study predicts excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The hazard model was deployed on a dataset deriving from 64 healthcare buildings in Spain. The study discerns significant influences, notably demographic and facility-related factors. The unique application of the model to predict every over-consumption underscores its adaptability beyond traditional survival analysis. 
+In a healthcare context, Ben-Assuli's [@Ben-Assuli2023] study predicts excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The hazard model was deployed on a dataset deriving from 64 healthcare buildings in Spain. The study discerns significant influences, notably demographic and facility-related factors. The unique application of the model to predict every over-consumption underscores its adaptability beyond traditional survival analysis. 
 
 In a different context, Gonzalez-Dominguez utilizes shared frailty with the Cox proportional hazards regression to analyze post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. Gonzalez-Dominguez analyzed a total of 18 variables such as patients records with demographic, clinical, medical and lab test data. This study conducted using data from Israeli Sheba Medical Center introduces the concept of shared frailty correction. This is a technique in survival analysis designed to account for unobserved variability among subjects. Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The authors dound that shared frailty correction markedly enhances the Cox Proportional Hazard model, particularly in handing dependent obervations.
 
@@ -128,8 +129,8 @@ Seer_updated %>%
   head(10) %>%
   ggplot(aes(x = reorder(Site.recode.ICD.O.3.WHO.2008, -n), y = n)) +
   geom_bar(stat = "identity", fill = "purple", color = "black") +  
-  labs(title = "Top 10 Categories of Death for Cancer",
-       x = "Site Recorded",
+  labs(title = "Top 10 Cancer Typesr",
+       x = "Cancer Type",
        y = "Count") +
   theme_minimal() +  
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
@@ -390,7 +391,7 @@ ggplot(df, aes(x = Median_Household_Income, fill=Median_Household_Income)) +
 
 ## Statistical Modeling
 
-In our earlier data preparation steps, we took the time to get our dataset in shape.As part of a thorough quality check, we went on the lookout for any missing values. Interestingly, we noticed that the 'Survival.months'column had some entries labeled as 'Unknown'.To keep things reliable, we decided to drop these entries, making sure our dataset is all set for the next stages of analysis.
+In our earlier data preparation steps, we took the time to get our dataset in shape. As part of a thorough quality check, we went on the lookout for any missing values. Interestingly, we noticed that the 'Survival.months' column had some entries labeled as 'Unknown'.To keep things reliable, we decided to drop these entries, ensuring our dataset is all set for the next stages of analysis.
 
 ```{r, warning=FALSE, echo=TRUE}
 colSums(is.na(df))
@@ -414,7 +415,7 @@ kable(table_data,
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 
 ```
-The model's coefficient estimates and hazard ratios demonstrate the magnitude and direction of the influence of each covariate on survival.The Black race category exhibits a coefficient of 0.0334489, translating to a hazard ratio of 1.0340146 and indicating a 3.4% higher hazard compared to other race categories. Similarly, the Other/Miscellaneous race category, with a coefficient of 0.0608675 and a hazard ratio of 1.0627581, demonstrates a 6.3% increased hazard compared to the reference group. In contrast, Pacific Islander and White race categories do not appear to significantly impact the hazard ratio.Being male has a coefficient of 0.0350546, meaning a hazard ratio of 1.0356763. This implies a 3.6% increase in the hazard of the event for males compared to females.For every one-unit increase in age, there's a hazard ratio of 1.0039630, suggesting a 0.4% increase in the hazard of death per unit increase in age.The impact of cancer types on survival is notable, with Liver Cancer, Other, Pancreatic Cancer, Rectal Cancer, and Renal Cancer groups all showing significant effects (all p-values < 0.05) on the hazard ratios. For example, Liver Cancer, with a coefficient of 0.5915345 and a hazard ratio of 1.8067588, indicates a substantially higher risk of death. Pancreatic Cancer stands out with the highest hazard ratio among these groups, signaling a 2.44 times higher hazard. This observation aligns with our visual representation in the bar graph of cancer types among deceased patients. Conversely, Thyroid Cancer lacks statistical significance, consistent with its lower prevalence among deceased patients according to our bar graph.
+The model's coefficient estimates and hazard ratios demonstrate the magnitude and direction of the influence of each covariate on survival. The Black race category exhibits a coefficient of 0.0334489, translating to a hazard ratio of 1.0340146 and indicating a 3.4% higher hazard compared to other race categories. Similarly, the Other/Miscellaneous race category, with a coefficient of 0.0608675 and a hazard ratio of 1.0627581, demonstrates a 6.3% increased hazard compared to the reference group. In contrast, Pacific Islander and White race categories do not appear to significantly impact the hazard ratio.Being male has a coefficient of 0.0350546, meaning a hazard ratio of 1.0356763. This implies a 3.6% increase in the hazard of the event for males compared to females.For every one-unit increase in age, there's a hazard ratio of 1.0039630, suggesting a 0.4% increase in the hazard of death per unit increase in age.The impact of cancer types on survival is notable, with Liver Cancer, Other, Pancreatic Cancer, Rectal Cancer, and Renal Cancer groups all showing significant effects (all p-values < 0.05) on the hazard ratios. For example, Liver Cancer, with a coefficient of 0.5915345 and a hazard ratio of 1.8067588, indicates a substantially higher risk of death. Pancreatic Cancer stands out with the highest hazard ratio among these groups, signaling a 2.44 times higher hazard. This observation aligns with our visual representation in the bar graph of cancer types among deceased patients. Conversely, Thyroid Cancer lacks statistical significance, consistent with its lower prevalence among deceased patients according to our bar graph.
 
 Below we check if the proportional hazards assumption holds true for each factor in the Cox model. This assumption is extremely important in survival analysis because it suggests that the influence of factors stays the same over time. The proportional hazards assumption implies that the effect of a variable (like gender, age) on the hazard (or risk) of an event (such as death) remains constant or proportional over different durations or time periods.
 ```{r, warning=FALSE, echo=TRUE}
@@ -426,9 +427,9 @@ print(cox.zph_result)
 plot(cox.zph(cox_model))
 
 ```
-Martingale residuals are a type of residual in survival analysis, specifically designed for Cox Proportional Hazard Models. These residuals are based on the difference between the observed event indicator and the predicted probability of an event at the observed failure time. The martingale residuals are useful for assessing the overall fit of the model and identifying potential patterns or outliers.The Schoenfeld test is a diagnostic test used to assess the proportional hazards assumption in the Cox Proportional Hazard Model. The proportional hazards assumption assumes that the hazard ratio between any two individuals is constant over time. The Schoenfeld test checks if the relationship between the predictor variables and the hazard is constant over time. Based on our results, our proportional hazards assumptions are violated given the p-values. We will use stratifying technique to see if we can improve our model. 
+Martingale residuals are a type of residual in survival analysis, specifically designed for Cox Proportional Hazard Models. These residuals are based on the difference between the observed event indicator and the predicted probability of an event at the observed failure time. The martingale residuals are useful for assessing the overall fit of the model and identifying potential patterns or outliers. The Schoenfeld test is a diagnostic test used to assess the proportional hazards assumption in the Cox Proportional Hazard Model. The proportional hazards assumption assumes that the hazard ratio between any two individuals is constant over time. The Schoenfeld test checks if the relationship between the predictor variables and the hazard is constant over time. Based on our results, our proportional hazards assumptions are violated given the p-values. We will use stratifying technique to see if we can improve our model. 
 
-####Stratified Analysis
+#### Stratified Analysis
 
 Due to our proportional hazards assumptions being violated, we decided to use stratification. Stratification is used to handle the influence of variables that violate the proportional hazards assumption. When certain variables are suspected to have different baseline hazard functions, which means they violate the proportional hazards assumption, we use strata to stratify the model by those variables. This allows each stratum to  have its own baseline hazard function, allowing for varying hazard ratios across strata. For this particular part, we decided to strata sex and age in order to see how our model will perform. 
 ```{r, warning=FALSE, echo=TRUE}
@@ -455,7 +456,8 @@ plot(cox.zph_result_stratified)
 ```
 Given the violation of assumptions observed in our stratified Cox Proportional Hazard Model, particularly in terms of non-proportional hazards for variables like Sex, Age, and Cancer_Group, we decided to refine our analysis by filtering on a specific cancer type, Thyroid Cancer. This strategic filtering allows us to explore the impact of this particular cancer type while potentially mitigating the observed violations.
 
-####Filtering analysis with Thyroid Cancer
+#### Filtering Analysis with Thyroid Cancer
+
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Thyroid Cancer")
 cox_model_filtered <- coxph(Surv(Survival.months) ~ Race_Category + Sex + Age, data = filtered_data)
@@ -478,9 +480,10 @@ cox.zph_result_filtered <- cox.zph(cox_model_filtered)
 print(cox.zph_result_filtered)
 plot(cox.zph_result_filtered)
 ```
-By filtering on Thyroid Cancer, we see that our p-values increase a little bit, but our assumptions remain violated. For the Schoenfeld Test the p-value for Race Category is .00042 indicating significant deviation from proportional hazards for Race Category within Thyroid Cancer. For Sex and Age, it has a p-value of .46600 and .09322, respectively. This shows that against a p-value of .05, it is not violating, however our global test emphasizes the challenge in maintaing proportional hazards assumptions within the strata. Based on this, we will use time dependent variables to see if it improves our model. 
+By filtering on Thyroid Cancer, we see that our p-values increase a little bit, but our assumptions remain violated. For the Schoenfeld Test the p-value for Race Category is .00042 indicating significant deviation from proportional hazards for Race Category within Thyroid Cancer. For Sex and Age, it has a p-value of .46600 and .09322, respectively. This shows that against a p-value of .05, it is not violating, however our global test emphasizes the challenge in maintaining proportional hazards assumptions within the strata. Based on this, we will use time dependent variables to see if it improves our model. 
 
-####Time Dependent Analysis
+#### Time Dependent Analysis
+
 We decided to implement a time dependent covariates as stated above. This approach enables us to examine how the hazard ratios categories change over time, providing a better understanding of their impact on survival outcome. The tt function is used to create time-transformed variables for selected covariates. 
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Thyroid Cancer")
@@ -494,8 +497,9 @@ kable(table_data,
       col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
-The time-dependent Cox proportional hazards model, specifically focusing on "Thyroid Cancer," reveals intriguing findings. Among race categories, while Black race shows a marginal increase (1.57%) in the hazard compared to the reference group, Other/Miscellaneous, Pacific Islander, and notably, White race exhibit significantly higher hazard ratios, with White race displaying a remarkably elevated hazard ratio of 14.03. 
+The time-dependent Cox proportional hazards model, specifically focusing on "Thyroid Cancer," reveals intriguing findings. Among race categories, while Black race shows a marginal increase 1.57% in the hazard compared to the reference group, Other/Miscellaneous, Pacific Islander, and notably, White race exhibit significantly higher hazard ratios, with White race displaying a remarkably elevated hazard ratio of 14.03. 
 Additionally, being male corresponds to a 3.59% higher hazard compared to females among thyroid cancer patients. Age shows a small yet significant impact, with a 0.12% increase in the hazard per unit increase in age. Notably, the time-dependent interaction term (tt(Race_Category)) suggests a varying impact of race categories on the hazard over time, revealing a decrease in hazard ratio for a specified race category with each unit increase in time compared to the reference time point. These findings highlight dynamic variations in hazard ratios concerning race categories and time among patients diagnosed with thyroid cancer.
+
 ```{r, warning=FALSE, echo=TRUE}
 cox_filtered_residuals <- residuals(cox_model_time_dep, type = "schoenfeld")
 summary(cox_filtered_residuals)
@@ -514,8 +518,10 @@ abline(h = 0, col = "purple", lty = 2)
 ```
 The cox.zph() function does not support time-transformed terms. Nevertheless, we can visually inspect the Schoenfeld residuals through plots to identify trends or patterns that might indicate a violation of the proportional hazards assumption. Our visual examination suggests that the proportional hazards assumption is not met. Consequently, we will explore an alternative approach by incorporating interactions in our model.
 
-####Interaction Analysis
+#### Interaction Analysis
+
 In survival analysis, an interaction term is often used to assess whether the effect of one variable on the outcome is modified by the presence of another variable. It allows us to explore whether the combined influence of two variables is greater (or different) than the sum of their individual effects.
+
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Thyroid Cancer")
 cox_model_filtered <- coxph(Surv(Survival.months) ~ Race_Category * Sex + Age, data = filtered_data)
@@ -538,9 +544,10 @@ cox.zph_result_filtered <- cox.zph(cox_model_filtered)
 print(cox.zph_result_filtered)
 plot(cox.zph_result_filtered)
 ```
-The overall or global test for the proportional hazards assumption (GLOBAL) combines all the variables and interactions. With a chi-squared test statistic of 24.625, 10 degrees of freedom, and a p-value of 0.00610, there’s evidence suggesting a violation of the proportional hazards assumption in the model among thyroid cancer cases. These results indicate that while some individual variables or interactions might not violate the assumption significantly(like Sex and Age), the model as a whole shows some evidence of departure from proportional hazards assumption among thyroid cancer patients.To further test this out I decided to use stratification in our next analysis. 
+The overall or global test for the proportional hazards assumption (GLOBAL) combines all the variables and interactions. With a chi-squared test statistic of 24.625, 10 degrees of freedom, and a p-value of 0.00610, there’s evidence suggesting a violation of the proportional hazards assumption in the model among thyroid cancer cases. These results indicate that while some individual variables or interactions might not violate the assumption significantly(like Sex and Age), the model as a whole shows some evidence of departure from proportional hazards assumption among thyroid cancer patients. To further test this out I decided to use stratification in our next analysis. 
 
-####Filtered Analysis with Stratification 
+#### Filtered Analysis with Stratification 
+
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Thyroid Cancer")
 cox_model_filtered <- coxph(Surv(Survival.months) ~  Sex + Age + strata(Race_Category), data = filtered_data)
@@ -565,7 +572,8 @@ plot(cox.zph_result_filtered)
 ```
 For Sex, the p-value is 0.396, suggesting no statistically significant violation of the proportional hazards assumption. Regarding Age, the p-value is 0.054, indicating a borderline violation; however, it remains above 0.05. The GLOBAL p-value for the entire model is 0.130. Since this value exceeds 0.05, there is no strong statistical evidence against the assumption of proportional hazards for the model as a whole. Since our p-value went up when disregarding the race-category, we decided to further filter our dataset. 
 
-####Filtering Analysis on Cancer and Race
+#### Filtering Analysis on Cancer and Race
+
 Below, we create a new variable called "Binary_Race" where we separate it into a binary variable" Black or other. This helps simplify the analysis and helps us dig deeper. 
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Thyroid Cancer")
@@ -581,7 +589,7 @@ kable(table_data,
       col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
-In the output above, we run a Cox proportional hazards model focused on individuals with Thyroid Cancer.The variable Binary_RaceOther doesn't show a statistically significant impact, indicating a minimal effect on the hazard ratio between the "Other" racial category and the reference (Black). However, being male exhibits a statistically significant impact, with a coefficient of 0.0324967, suggesting a 3.30% higher hazard compared to females. Moreover, Age displays a statistically significant effect, indicating that for every one-unit increase in age, there's a 0.11% rise in the hazard of the event among individuals diagnosed with thyroid cancer.
+In the output above, we run a Cox proportional hazards model focused on individuals with Thyroid Cancer. The variable Binary_RaceOther doesn't show a statistically significant impact, indicating a minimal effect on the hazard ratio between the "Other" racial category and the reference (Black). However, being male exhibits a statistically significant impact, with a coefficient of 0.0324967, suggesting a 3.30% higher hazard compared to females. Moreover, Age displays a statistically significant effect, indicating that for every one-unit increase in age, there's a 0.11% rise in the hazard of the event among individuals diagnosed with thyroid cancer.
 
 ```{r, warning=FALSE, echo=TRUE}
 cox_filtered_residuals <- residuals(cox_model_filtered, type = "martingale")
@@ -593,7 +601,7 @@ plot(cox.zph_result_filtered)
 ```
 The martingale residuals display a distribution centered around 0, indicating a reasonable fit of the Cox model to the data. The Schoenfeld residuals show that none of the variables significantly violate the proportional hazards assumption individually. The GLOBAL test reinforces this, suggesting that, collectively, the variables do not provide strong evidence against the proportional hazards assumption. By editing the Race_Category we found that our model improved overall. 
 
-####Filter Analysis with Renal Cancer
+#### Filter Analysis with Renal Cancer
 
 Below, we decided to do a similar analysis but focus on Renal Cancer, which was one of our more common cancer types among deceased patients. 
 ```{r, warning=FALSE, echo=TRUE}
@@ -608,7 +616,7 @@ kable(table_data,
       col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
-None of the race categories show a statistically significant impact on the hazard ratio, as indicated by their respective p-values.This suggests that, within the context of Renal Cancer, these racial categories do not significantly alter the hazard of the event. The coefficient for being male is -0.0041979, resulting in a hazard ratio of 0.9958109. This implies a negligible decrease 0.42% in the hazard of the event for males compared to females with Renal Cancer. However, the effect is not statistically significant, with a p-value of 0.6316300. The coefficient for Age is 0.0042975, corresponding to a hazard ratio of 1.0043067. This indicates a statistically significant 0.43% increase in the hazard of the event for every one-unit increase in age among individuals diagnosed with Renal Cancer.
+None of the race categories show a statistically significant impact on the hazard ratio, as indicated by their respective p-values. This suggests that, within the context of Renal Cancer, these racial categories do not significantly alter the hazard of the event. The coefficient for being male is -0.0041979, resulting in a hazard ratio of 0.9958109. This implies a negligible decrease 0.42% in the hazard of the event for males compared to females with Renal Cancer. However, the effect is not statistically significant, with a p-value of 0.6316300. The coefficient for Age is 0.0042975, corresponding to a hazard ratio of 1.0043067. This indicates a statistically significant 0.43% increase in the hazard of the event for every one-unit increase in age among individuals diagnosed with Renal Cancer.
 
 ```{r, warning=FALSE, echo=TRUE}
 cox_filtered_residuals <- residuals(cox_model_filtered, type = "martingale")
@@ -622,7 +630,8 @@ Sex shows no evidence of violating the proportional hazards assumption, both Rac
  
 Given how many of our patients with renal cancer end up passing, it makes sense as to why our variables are statistically significant. We dug deeper and looked into stratifying our model to look at individual variables more closely.
 
-####Stratification on Renal Cancer Analysis
+#### Stratification on Renal Cancer Analysis
+
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Renal Cancer")
 cox_model_filtered <- coxph(Surv(Survival.months) ~ Race_Category + Sex + strata(Age), data = filtered_data)
@@ -635,7 +644,7 @@ kable(table_data,
       col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
-Across the race categories, none exhibit a statistically significant impact on the hazard ratio, as indicated by their respective p-values. This suggests that, within the context of Renal Cancer and after accounting for age as a stratification variable, these racial categories do not significantly alter the hazard of the event.The coefficient for being male is -0.0020202, resulting in a hazard ratio of 0.9979818. This implies a minimal decrease 0.20% in the hazard of the event for males compared to females with Renal Cancer. Importantly, this effect is not statistically significant, with a p-value of 0.8180026.
+Across the race categories, none exhibit a statistically significant impact on the hazard ratio, as indicated by their respective p-values. This suggests that, within the context of Renal Cancer and after accounting for age as a stratification variable, these racial categories do not significantly alter the hazard of the event. The coefficient for being male is -0.0020202, resulting in a hazard ratio of 0.9979818. This implies a minimal decrease 0.20% in the hazard of the event for males compared to females with Renal Cancer. Importantly, this effect is not statistically significant, with a p-value of 0.8180026.
 
 ```{r, warning=FALSE, echo=TRUE}
 cox_filtered_residuals <- residuals(cox_model_filtered, type = "martingale")
@@ -645,9 +654,10 @@ cox.zph_result_filtered <- cox.zph(cox_model_filtered)
 print(cox.zph_result_filtered)
 plot(cox.zph_result_filtered)
 ```
-For sex we have a non-signficiant p-value of .3592, indicating no strong evidence of a departure from proportional hazards for the variable. However, for race_category we have a signficiant departure from proportional hazards. This indicates that the effect of race on survival time changes over time. Because of this low p-value we decided to use interaction terms as well to see how our model improves. 
+For sex we have a non-significant p-value of .3592, indicating no strong evidence of a departure from proportional hazards for the variable. However, for race_category we have a significant departure from proportional hazards. This indicates that the effect of race on survival time changes over time. Because of this low p-value we decided to use interaction terms as well to see how our model improves. 
 
-####Interaction Term with Renal Cancer 
+#### Interaction Term with Renal Cancer 
+
 ```{r, warning=FALSE, echo=TRUE}
 filtered_data <- filter(df_cleaned, Cancer_Group == "Renal Cancer")
 cox_model_filtered <- coxph(Surv(Survival.months) ~ Race_Category * Sex + strata(Age), data = filtered_data)
@@ -660,7 +670,7 @@ kable(table_data,
       col.names = c("Coefficient", "Hazard Ratio", "p-value")) %>%
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
-None of the individual race categories exhibit a statistically significant impact on the hazard ratio, as indicated by their respective p-values. This suggests that, within the context of Renal Cancer and after accounting for age as a stratification variable, the hazard ratios for these race categories do not significantly differ.The coefficient for being male is -0.0726116, resulting in a hazard ratio of 0.9299620. This implies a non-significant decrease 7.00% in the hazard of the event for males compared to females with Renal Cancer, as the p-value is 0.3309375.None of the interaction terms between Race_Category and SexMale are statistically significant. This indicates that the combined effect of race and sex on the hazard ratio does not significantly differ from the sum of their individual effects.
+None of the individual race categories exhibit a statistically significant impact on the hazard ratio, as indicated by their respective p-values. This suggests that, within the context of Renal Cancer and after accounting for age as a stratification variable, the hazard ratios for these race categories do not significantly differ. The coefficient for being male is -0.0726116, resulting in a hazard ratio of 0.9299620. This implies a non-significant decrease 7.00% in the hazard of the event for males compared to females with Renal Cancer, as the p-value is 0.3309375. None of the interaction terms between Race_Category and SexMale are statistically significant. This indicates that the combined effect of race and sex on the hazard ratio does not significantly differ from the sum of their individual effects.
 
 ```{r, warning=FALSE, echo=TRUE}
 cox_filtered_residuals <- residuals(cox_model_filtered, type = "martingale")
@@ -701,7 +711,8 @@ plot(cox.zph_result_filtered)
 ```
 The Schoenfeld residuals show that none of the variables significantly violate the proportional hazards assumption individually. The GLOBAL test reinforces this, suggesting that, collectively, the variables do not provide strong evidence against the proportional hazards assumption. By editing the Race_Category we found that our model improved overall similar to what was done in our Thyroid Cancer analysis. 
 
-##Conclusion
+## Conclusion
+
 In this comprehensive analysis, we have successfully identified significant predictors that influence cancer survival, providing insights into the intricate dynamics that contribute to patient outcomes. Our exploration has delved into the multifaceted aspects of survival dynamics, revealing nuances that underscore the complexity of the relationships among various factors and survival duration. The violation of the proportional hazards assumption was identified, prompting a need for further investigation. To address this, we strategically employed advanced methods such as stratification, interaction terms, and the inclusion of time-dependent covariates. We also filtered on different cancer types, such as Thyroid Cancer and Renal Cancer. These approaches were crucial in capturing the evolving nature of predictors over time. Our findings not only illuminate the critical variables impacting cancer survival but also underscore the importance of employing dynamic modeling techniques to unravel the intricacies of survival analysis within this context.By narrowing our focus, we can create a more streamlined and focused model, reducing the influence of confounding variables and enhancing the precision of our analysis.This strategic refinement contributed to a clearer understanding of the specific factors influencing survival outcomes in the context of the selected cancer type. Some of the challenges during this study were that filtering on certain cancer types that had a high mortality, such as pancreatic, led to inflated significance levels, as there's no variability to truly assess the impact of predictors on the vent of intrest within that specific subset. 
 
 Throughout our research encompassing all patients and then focusing on specific cancer types like thyroid and renal cancers, we rigorously assessed the proportional hazards assumption within the Cox models. Despite segmenting the data into these subsets, our attempts to conform to the assumption were met with persistent violations, particularly concerning variables related to race categories and their interactions across different cancer types. This iterative exploration, examining various cancer groups, indicated that these factors consistently displayed deviations from the assumption of constant hazard ratios over time. This persistent violation underscores the complexity of temporal effects in these specific cancer contexts, highlighting the need for nuanced modeling approaches that account for dynamic changes in hazard ratios across diverse patient populations. Despite our efforts to refine analyses by focusing on specific cancer types, the challenge of reconciling varying hazard ratios within the proportional hazards framework persisted, emphasizing the intricacies and potential limitations in modeling survival dynamics across different cancer subgroups.
